--- a/text_to_speech_1/index.html
+++ b/text_to_speech_1/index.html
@@ -8,7 +8,7 @@
 	<div id="main">
 		<div id="title">
 			<span>Speech to Text Demonstration</span>
-			<span id="created-by">Created by Matthew Edwards</span>
+			<a id="created-by" href="https://github.com/matthewedwardsinternship/text-to-speech">Created by Matthew Edwards</a>
 		</div>
 		<div id="textarea-wrapper">
 			<textarea id="textarea"></textarea>
