--- a/text_to_speech_1/index.html
+++ b/text_to_speech_1/index.html
@@ -7,7 +7,7 @@
 <body>
 	<div id="main">
 		<div id="title">
-			<span>Speech to Text Demonstration</span>
+			<span>Text to Speech Demonstration</span>
 			<a id="created-by" href="https://github.com/matthewedwardsinternship/text-to-speech">Created by Matthew Edwards</a>
 		</div>
 		<div id="textarea-wrapper">
